bug fix - horizontal scrolling on mobile

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,16 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
-
-@layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
-  }
+.webkit-overflow-scrolling {
+  -webkit-overflow-scrolling: touch;
 }
-
-*/
-
 
 .montserrat {
   font-family: "Montserrat", sans-serif;
